@@ -3,7 +3,7 @@ package ru.topjava.basejava;
 import ru.topjava.basejava.model.*;
 
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Arrays;
 
 public class ResumeTestData {
     public static Resume fillResume(String uuid, String fullName) {
@@ -19,7 +19,7 @@ public class ResumeTestData {
         testResume.setRecord(SectionType.PERSONAL,
                 new SimpleTextRecord("Аналитический склад ума, сильная логика, креативность, " +
                         "инициативность. Пурист кода и архитектуры."));
-        testResume.setRecord(SectionType.ACHIEVEMENTS, new BulletedListRecord(List.of(
+        testResume.setRecord(SectionType.ACHIEVEMENTS, new BulletedListRecord(Arrays.asList(
                 "С 2013 года: разработка проектов \"Разработка Web приложения\",\"Java Enterprise\"",
                 "Реализация двухфакторной аутентификации для онлайн платформы управления проектами Wrike",
                 "Налаживание процесса разработки и непрерывной интеграции ERP системы River BPM. ",
@@ -27,22 +27,22 @@ public class ResumeTestData {
                         " GWT, ExtGWT (GXT), Commet, HTML5, Highstock для алгоритмического трейдинга.",
                 "Создание JavaEE фреймворка для отказоустойчивого взаимодействия слабо-связанных сервисов"
         )));
-        testResume.setRecord(SectionType.QUALIFICATIONS, new BulletedListRecord(List.of(
+        testResume.setRecord(SectionType.QUALIFICATIONS, new BulletedListRecord(Arrays.asList(
                 "JEE AS: GlassFish (v2.1, v3), OC4J, JBoss, Tomcat, Jetty, WebLogic, WSO2",
                 "Version control: Subversion, Git, Mercury, ClearCase, Perforce",
                 "DB: PostgreSQL(наследование, pgplsql, PL/Python), Redis (Jedis), H2, Oracle",
                 "MySQL, SQLite, MS SQL, HSQLDB",
                 "Languages: Java, Scala, Python/Jython/PL-Python, JavaScript, Groovy"
         )));
-        testResume.setRecord(SectionType.EXPERIENCE, new OrganizationListRecord(List.of(
+        testResume.setRecord(SectionType.EXPERIENCE, new OrganizationListRecord(Arrays.asList((
                 new Organization("Java Online Projects",
                         "javaops.ru",
-                        List.of(new Organization.Position(LocalDate.of(2013, 10, 1),
+                        Arrays.asList(new Organization.Position(LocalDate.of(2013, 10, 1),
                                 LocalDate.now(),
                                 "Автор проекта",
-                                "Создание, организация и проведение Java онлайн проектов и стажировок"))),
+                                "Создание, организация и проведение Java онлайн проектов и стажировок")))),
                 new Organization("Wrike", "www.wrike.com",
-                        List.of(new Organization.Position(LocalDate.of(2014, 10, 1),
+                        Arrays.asList(new Organization.Position(LocalDate.of(2014, 10, 1),
                                 LocalDate.of(2016, 01, 01),
                                 "Старший разработчик (backend)",
                                 "Проектирование и разработка онлайн платформы управления проектами Wrike " +
